# HyperRoute

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: clean_persistence.sh  run_sim.sh
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
application/: CMakeLists.txt
application/app/: CMakeLists.txt  main.cpp
application/config/: Configuration.h  config.xml
application/enricher/: ClientEnricher.h  VenueEnricher.h
application/message/core/: BinaryMessages.h  Messages.h  NewOrderSingle.h  OrderStore.cpp  OrderStore.h  Types.h  UIDGenerator.h
application/message/protocol_a/: Messages.h  NewOrderSingle.h
application/message/protocol_b/: Messages.h  NewOrderSingle.h
application/persistence/: CMakeLists.txt  file_persistance.h  persistence_varient.h
application/protocol/: ProtocolA.cpp  ProtocolA.h  ProtocolB.cpp  ProtocolB.h
application/router/: DestinatinRouter.h  DestinatinRouters.h  DestinationRouterOneToMany.h  DestinationRouterOneToOne.h  ForwardRouters.h  ReverseRouter.cpp  ReverseRouter.h
application/session/: ClientSession.h  ClientSessionInfo.h  ClientSessionProtocolA.cpp  ClientSessionProtocolA.h  ClientSessions.h  ClientSessionsDeclaration.h  DestinationSession.h  DestinationSessionProtocolB.cpp  DestinationSessionProtocolB.h  DestinationSessions.h  DestinationSessionsDeclarations.h  ProtocolA.cpp  ProtocolA.h  ProtocolB.cpp  ProtocolB.h  RejectInfo.h  SourceSession.h  SourceSessionProtocolA.cpp  SourceSessionProtocolA.h  SourceSessions.h  SourceSessionsDeclaration.h  VenueSession.h  VenueSessionProtocolB.cpp  VenueSessionProtocolB.h  VenueSessions.h
application/trading_system/: CMakeLists.txt  main.cpp
application/transport/: Transport.h
application/util/: CrtpWrapper.h
application/utility/: CMakeLists.txt  utility.h
application/validator/: StatelessCheck01.h  Validator.h  ValidatorX.h
example/: CMakeLists.txt
example/trading_system/: CMakeLists.txt
example/trading_system/application/: CMakeLists.txt  main.cpp
example/trading_system/protocol/: ProtocolA.cpp  ProtocolA.h  ProtocolB.cpp  ProtocolB.h
example/trading_system/session/: DestinationSessionProtocolB.cpp  DestinationSessionProtocolB.h  SourceSessionProtocolA.cpp  SourceSessionProtocolA.h  SourceSessions.h
examples/: CMakeLists.txt
examples/trading_system/: CMakeLists.txt
examples/trading_system/application/: CMakeLists.txt  Factory.h  TestMessageStore.h  app_benchmark_core.cpp  application.cpp  main copy.cpp  main.cpp  sim_client_a.cpp  sim_server_b.cpp
examples/trading_system/config/: config copy.xml  config.xml
examples/trading_system/message/core/: BinaryMessages.h  Messages.h
examples/trading_system/message/protocol_a/: Messages.h
examples/trading_system/message/protocol_a/schema/: Messages.h
examples/trading_system/message/protocol_b/: Messages.h
examples/trading_system/message/protocol_b/schema/: Messages.h
examples/trading_system/protocol/: CMakeLists.txt  ProtocolA.cpp  ProtocolA.h  ProtocolB.cpp  ProtocolB.h
examples/trading_system/session/: CMakeLists.txt  DestinationSessionProtocolB.cpp  DestinationSessionProtocolB.h  SourceSessionProtocolA.cpp  SourceSessionProtocolA.h
examples/trading_system/utility/: utility.h
examples/trading_system/validator/: StatelessCheck01.h  ValidatorX.h
framework/: CMakeLists.txt
framework/application/: Application.cpp  Application.h  CMakeLists.txt  application.cpp  application.h
framework/application_dependency/: DestinationProtocolDeclarations.h  DestinationProtocols.h  DestinationRouterDeclarations.h  DestinationRouters.h  DestinationSessionDeclarations.h  DestinationSessions.h  DestinationSessionsDeclarations.h  SourceProtocolDeclarations.h  SourceProtocols.h  SourceRouterDeclarations.h  SourceSessionDeclarations.h  SourceSessions.h  ValidatorDeclarations.h  Validators.h
framework/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Configuration.cpp  Configuration.h  config.xml
framework/enricher/: DestinationEnricher.h  SourceEnricher.h
framework/factory/: DestinationProtocolFactory.h  DestinationRouterFactory.h  Factory.h  ProtocolFactory.h  SourceProtocolFactory.h  ValidatorFactory.h
framework/message/: BinaryMessage.h  BinaryMessages.h  Message.h  MessageStore.h  Messages.h  UIDGenerator.h
framework/persistance/: FilePersistStore.h  PersistStore.h  PersistStores.h  Persistance.h  PersistanceFile.h  Persistances.h
framework/protocol/: DestinationSession.h  Protocol.h  RejectInfo.h  SourceSession.h
framework/router/: DestinationRouter.h  DestinationRouterOneToMany.h  DestinationRouterOneToOne.h  DestinationRouterRoundRobin.h  DestinationRouters.h  SourceRouter.cpp  SourceRouter.h
framework/sequence_store/: MemoryMappedData.h  SequenceStore.h
framework/session/: DestinationSession.h  Session.h  SourceSession.h
framework/simulator/: Simulator.h  TCPSimulator.h  TcpSimulator.h
framework/socket/: SocketCallbacks.h
framework/socket/tcp/: CMakeLists.txt  EpollSocketManager.cpp  EpollSocketManager.h  SocketException.h  tcp_test.cpp  test.cpp
framework/state_machine/: StateMachine.h
framework/transform/: DestinationTransform.h  SourceTransform.h
framework/transport/: CMakeLists.txt  Transport.cpp  Transport.h  TransportAPI.cpp  TransportAPI.h  TransportCallbacks.h  TransportSingleThreaded.cpp  TransportSingleThreaded.h
framework/utility/: CMakeLists.txt  CrtpBase.h  ErrorInfo.h  RejectInfo.cpp  RejectInfo.h  TimeAux.h  Types.h
framework/validator/: Validator.h
message/application/: CMakeLists.txt  test.cpp
message/application/app/: main.cpp
message/application/config/: CMakeLists.txt  Configuration.h  config.xml
message/application/message/protocol_a/: CMakeLists.txt
message/application/persistence/: persistence_base.h
message/application/router/: ForwardRouterBase.h  ForwardRouterOneToOne.h  OneToManyForwardRouter.h  ReverseRouter.cpp
message/application/session/: RejectInfo.h  VenueSessionProtocolB.cpp  VenueSessionProtocolB.h
message/ouch/: cancel_ack.h  cancel_replace.h  cancel_replace_ack.h  new_order.h  new_order_ack.h
(+10 files in other folders)
